<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/strr1c1"
            android:layout_width="86dp"
            android:layout_height="64dp"
            android:id="@+id/week2r1c1"
            android:textSize="24sp"
            android:layout_alignParentTop="true" android:layout_marginTop="128dp"
            android:textColor="?android:attr/colorAccent" android:textAlignment="center" android:textStyle="bold"
            android:layout_alignParentStart="true" android:layout_marginStart="16dp"/>
    <TextView
            android:layout_width="132dp"
            android:layout_height="64dp"
            android:id="@+id/week2r1c2" android:textSize="24sp" android:textColor="?android:attr/colorAccent"
            android:layout_alignParentStart="true" android:layout_marginStart="120dp"
            android:layout_alignTop="@+id/week2r1c1" android:textAlignment="center" android:textStyle="bold"
            android:text="@string/strr1c2"/>
    <TextView
            android:text="@string/strr1c3"
            android:layout_height="64dp" android:layout_alignParentEnd="true"
            android:id="@+id/week2r1c3"
            android:textSize="24sp" android:textColor="?android:attr/colorAccent"
            android:layout_width="132dp" android:layout_marginEnd="14dp" android:layout_alignTop="@+id/week2r1c1"
            android:textAlignment="center" android:textStyle="bold"/>
    <TextView
            android:text="@string/week2Button"
            android:layout_width="306dp"
            android:layout_height="57dp"
            android:layout_alignParentTop="true" android:layout_marginTop="43dp" android:id="@+id/week2Header"
            android:layout_centerHorizontal="true" android:textColor="?android:attr/actionMenuTextColor"
            android:textStyle="bold" android:textAlignment="center" android:textSize="32sp" android:textAllCaps="true"/>
    <TextView
            android:text="@string/strw2r2c1"
            android:layout_width="86dp"
            android:layout_height="68dp"
            android:id="@+id/week2r2c1"
            android:textColor="?android:attr/colorForeground"
            android:textSize="20sp"
            android:textAlignment="center" android:visibility="visible"
            android:layout_alignParentTop="true" android:layout_marginTop="221dp"
            android:layout_alignStart="@+id/week2r1c1" android:textStyle="bold"/>
    <TextView
            android:text="@string/strw2r2c2"
            android:layout_width="132dp"
            android:layout_height="68dp"
            android:id="@+id/week2r2c2"
            android:textColor="?android:attr/actionMenuTextColor"
            android:layout_alignStart="@+id/week2r1c2" android:layout_alignTop="@+id/week2r2c1"/>
    <TextView
            android:text="@string/strw2r2c3"
            android:layout_width="132dp"
            android:layout_height="68dp"
            android:id="@+id/week2r2c3"
            android:textSize="14sp"
            android:textColor="?android:attr/actionMenuTextColor"
            android:layout_alignTop="@+id/week2r2c1" android:layout_alignStart="@+id/week2r1c3"/>
    <TextView
            android:text="@string/strw2r3c1"
            android:layout_width="86dp"
            android:layout_height="68dp"
            android:id="@+id/week2r3c1"
            android:textStyle="bold" android:textColor="?android:attr/actionMenuTextColor" android:textSize="20sp"
            android:textAlignment="center" android:layout_centerVertical="true"
            android:layout_alignStart="@+id/week2r1c1"/>
    <TextView
            android:text="@string/strw2r4c1"
            android:layout_width="120dp"
            android:layout_height="68dp"
            android:layout_alignParentBottom="true" android:id="@+id/week2r4c1"
            android:layout_marginBottom="218dp" android:textAlignment="center"
            android:textStyle="bold" android:textSize="20sp" android:textColor="?android:attr/actionMenuTextColor"
            android:layout_alignParentStart="true"/>
    <TextView
            android:text="@string/strw2r5c1"
            android:layout_width="86dp"
            android:layout_height="68dp"
            android:id="@+id/week2r5c1"
            android:textStyle="bold" android:textColor="?android:attr/actionMenuTextColor" android:textSize="20sp"
            android:textAlignment="center"
            android:layout_alignStart="@+id/week2r1c1" android:layout_alignTop="@+id/week2r5c2"/>
    <TextView
            android:text="@string/strw2r6c1"
            android:layout_width="86dp"
            android:layout_height="68dp"
            android:layout_alignParentBottom="true" android:id="@+id/week2r6c1"
            android:textSize="20sp" android:textColor="?android:attr/actionMenuTextColor" android:textStyle="bold"
            android:textAlignment="center" android:layout_marginBottom="24dp"
            android:layout_alignStart="@+id/week2r1c1"/>
    <TextView
            android:text="@string/strw2r3c2"
            android:layout_width="132dp"
            android:layout_height="68dp"
            android:id="@+id/week2r3c2" android:layout_alignTop="@+id/week2r3c1"
            android:layout_alignStart="@+id/week2r1c2" android:textSize="14sp"
            android:textColor="?android:attr/actionMenuTextColor"/>
    <TextView
            android:text="@string/strw2r3c3"
            android:layout_width="138dp"
            android:layout_height="68dp"
            android:id="@+id/week2r3c3" android:layout_alignTop="@+id/week2r3c1"
            android:layout_alignStart="@+id/week2r1c3" android:textColor="?android:attr/actionMenuTextColor"/>
    <TextView
            android:text="@string/strw2r4c2"
            android:layout_width="132dp"
            android:layout_height="68dp"
            android:id="@+id/week2r4c2" android:layout_alignTop="@+id/week2r4c1"
            android:layout_alignStart="@+id/week2r1c2" android:textColor="?android:attr/actionMenuTextColor"/>
    <TextView
            android:text="@string/strw2r4c3"
            android:layout_width="132dp"
            android:layout_height="68dp"
            android:id="@+id/week2r4c3" android:layout_alignTop="@+id/week2r4c1"
            android:layout_alignStart="@+id/week2r1c3" android:textColor="?android:attr/actionMenuTextColor"/>
    <TextView
            android:text="@string/strw2r5c2"
            android:layout_width="132dp"
            android:layout_height="68dp"
            android:id="@+id/week2r5c2"
            android:textColor="?android:attr/actionMenuTextColor"
            android:layout_alignStart="@+id/week2r1c2" android:layout_alignParentBottom="true"
            android:layout_marginBottom="119dp"/>
    <TextView
            android:text="@string/strw2r5c3"
            android:layout_width="132dp"
            android:layout_height="68dp"
            android:id="@+id/week2r5c3"
            android:textColor="?android:attr/actionMenuTextColor"
            android:layout_alignStart="@+id/week2r1c3" android:layout_alignTop="@+id/week2r5c2"/>
    <TextView
            android:text="@string/strw2r6c2"
            android:layout_width="132dp"
            android:layout_height="68dp"
            android:id="@+id/week2r6c2" android:layout_alignTop="@+id/week2r6c1"
            android:layout_alignStart="@+id/week2r1c2" android:textColor="?android:attr/actionMenuTextColor"/>
    <TextView
            android:text="@string/strw2r6c3"
            android:layout_width="132dp"
            android:layout_height="68dp"
            android:id="@+id/week2r6c3" android:layout_alignTop="@+id/week2r6c1"
            android:layout_alignStart="@+id/week2r1c3" android:textColor="?android:attr/actionMenuTextColor"/>
</RelativeLayout>