<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity6">

    <TextView
            android:text="@string/tip3num"
            android:layout_width="113dp"
            android:layout_height="86dp"
            android:id="@+id/tip3num" android:textSize="50sp"
            android:textStyle="bold" android:textColor="?android:attr/actionMenuTextColor"
            android:textAlignment="center" android:layout_alignParentTop="true"
            android:layout_marginTop="52dp" android:layout_centerHorizontal="true"/>
    <TextView
            android:text="@string/tip3"
            android:layout_width="383dp"
            android:layout_height="wrap_content"
            android:id="@+id/tip3" android:textSize="24sp"
            android:textColor="?android:attr/actionMenuTextColor" android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="160dp" android:layout_centerHorizontal="true"/>
    <Button
            android:text="@string/next"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:id="@+id/t3next"
            android:background="?android:attr/colorAccent" android:textSize="20sp"
            android:textColor="?android:attr/colorBackground" android:textStyle="bold"
            android:layout_toEndOf="@+id/tip3num" android:layout_alignTop="@+id/t3back"/>
    <Button
            android:text="@string/back"
            android:layout_width="120dp"
            android:layout_height="40dp" android:layout_alignParentBottom="true"
            android:id="@+id/t3back"
            android:background="?android:attr/colorAccent" android:textColor="?android:attr/colorBackground"
            android:textStyle="bold" android:textSize="20sp" android:layout_marginBottom="47dp"
            android:layout_toStartOf="@+id/tip3num"/>
    <ImageView
            android:layout_width="231dp"
            android:layout_height="229dp" android:src="@drawable/tip3"
            android:id="@+id/tip3Picture" android:layout_marginTop="163dp" android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true" android:contentDescription="@string/tip3"/>
</RelativeLayout>